--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,40 +1,31 @@
-
 body {
     -webkit-touch-callout: none;
     -webkit-text-size-adjust: none;
-    background-color: #f8f8f8;
-    font-family: Arial, sans-serif;
-    font-size: 12px;
-    height: 100vh;
-    margin: 20px;
+    background-color:#E4E4E4;
+    font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
+    font-size:12px;
+    height:100vh;
+    margin:0px;
+    padding:0px;
     padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px);
-    width: 100%;
+    width:100%;
 }
 
 .app-lista {
     margin-top: 10px;
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin: auto;
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    height: 95%;
+    width:99%;
+    height: 95%
 }
 
 .superior {
     flex: 10;
     overflow: auto;
-    border-bottom: 2px solid #ddd;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
 }
 
 .inferior {
     flex: 1;
-    text-align: right;
 }
 
 .linha {
@@ -47,26 +38,15 @@ body {
 .botao-novo {
     width: 100%;
     height: 99%;
-    padding: 10px 20px;
-    background: #ff5722;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
-}
-
-.botao-novo:hover {
-    background: #e64a19;
 }
 
 .app-cadastro {
     display: none;
     flex-direction: column;
-    color: black;
-    width: 99%;
-    height: 90%;
+    width:99%;
+    height: 90%
 }
 
 .imagem {
